[package]
name = "bulirsch"
version = "0.1.1"
authors = ["Josh Burkart"]
edition = "2024"
license = "MIT"
description = "Bulirsch-Stoer ODE integration method"

[dependencies]
ndarray = { version = "0.16" }
num-traits = { version = "0.2" }

[dev-dependencies]
approx = { version = "0.5" }
nalgebra = { version = "0.33" }
ode_solvers = { version = "0.6.1" }
